# Corewar

./: CMakeLists.txt
VirtualMachine/: 42.cor  BotFromKemerovo2.cor  Makefile  a1  a2  corewar  zork.cor
VirtualMachine/inc/: commands.h  op.h  parsing.h  visualization.h  vm.h
VirtualMachine/src/: commands.c  corewar.c  display_map.c  end_game.c  ft_get_int.c  main.c  manage_bot_list.c  manage_map.c  manage_pc_list.c  parsing_comands.c  parsing_commands.c
VirtualMachine/src/commands/: commands.c  ft_and.c  ft_get_int.c  ft_ldi.c  ft_lld.c  ft_lldi.c  ft_load.c  ft_or.c  ft_st.c  ft_sti.c  ft_sti_dir.c  ft_xor.c  parsing_commands.c
VirtualMachine/src/main_part/: choose_winner.c  corewar.c  end_game.c  main.c  manage_bot_list.c  manage_pc_list.c
VirtualMachine/src/parsing/: get_bot_info.c  manage_arguments.c  parse_bot.c  parse_bot_id.c  parsing.c
VirtualMachine/src/visualization/: .print_border.c.swp  display_map.c  print_border.c  print_right_window.c
